<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">果壳的壳</string>
    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>
    <string name="write_post">发帖</string>
    <string name="write_question">提问题</string>
    <string name="action_settings">设置</string>
    <string name="action_save">保存</string>
    <string name="action_cancel_simple_reply">取消回复</string>
    <string name="action_load_desc">倒序查看</string>
    <string name="action_load_acs">正序查看</string>
    <string name="action_ignore_all">全部忽略</string>
    <string name="title_activity_setting">设置</string>
    <string name="article">科学人</string>
    <string name="shuffle_groups">小组管理</string>
    <string name="shuffle_tags">标签管理</string>
    <string name="post">小组</string>
    <string name="question">问答</string>
    <string name="baskets">收藏</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_reply_article">回复</string>
    <string name="pull_down_to_refresh">下拉以刷新</string>
    <string name="release_to_refresh">放开以刷新</string>
    <string name="refreshing">刷新中</string>
    <string name="pull_up_to_load_more">上拉以加载更多</string>
    <string name="release_to_load_more">放开以加载更多</string>
    <string name="loading">加载中……</string>
    <string name="idling">完成</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="action_done">完成</string>

    <!-- Sample Strings -->
    <string name="sample_floor">1楼</string>
    <string name="sample_like_num">22</string>
    <string name="sample_reply_num">38</string>
    <string name="sample_group">万有引力</string>
    <string name="sample_title">弹涂鱼：上岸本领哪里来？</string>
    <string name="sample_author">无名氏</string>
    <string name="sample_author_title">叫兽</string>
    <string name="sample_date">2014–12–05 22:45:51</string>
    <string name="sample_summary">泥盆纪生物从水生到陆生的转变，是脊椎动物演化史中最重要的事件。这种转变最终导致了四足动物的出现。许多后来出现的两栖硬骨鱼在适应陆地生活的过程中演化出了用来行走的胸鳍、更佳的视力和对氨的耐受力。然而此前，人们对这些演化的基因和分子基础还知之甚少。</string>

    <!-- user -->
    <string name="action_create_basket">创建</string>
    <string name="action_invoke_create_basket">创建果篮</string>
    <string name="action_favor">收藏</string>
    <string name="action_reply">回复</string>
    <string name="recommend_article">推荐文章</string>
    <string name="recommend_question">推荐问答</string>
    <string name="action_copy">复制</string>
    <string name="action_like">点赞</string>
    <string name="action_delete">删除</string>
    <string name="action_support">赞同</string>
    <string name="action_oppose">反对</string>
    <string name="hint_reply">请输入回复</string>
    <string name="hint_answer">在这里写下您的答案</string>
    <string name="hint_input_post_content">在这里输入帖子正文</string>
    <string name="hint_recommend">顺便说点什么吧</string>
    <string name="message_wait_a_minute">稍等片刻……</string>
    <string name="message_loading_my_groups">稍等片刻……</string>
    <string name="input_image_url">输入图片地址</string>
    <string name="input_link_url">插入链接</string>
    <string name="way_to_add_image">选择添加图片的方式</string>
    <string name="add_image_from_disk">本地相册上传</string>
    <string name="add_image_from_camera">拍照上传</string>
    <string name="add_image_from_link">使用图片网址</string>
    <string name="hint_input_basket_name">输入果篮名</string>
    <string name="hint_input_basket_introduction">输入果篮介绍，选填</string>
    <string name="hint_input_image_url">输入图片网址</string>
    <string name="hint_input_url">输入网址链接</string>
    <string name="hint_input_title">输入网址标题</string>
    <string name="file_not_image">不是图片文件</string>
    <string name="file_not_exists">文件不存在</string>
    <string name="content_cannot_be_empty">内容不能为空</string>
    <string name="title_cannot_be_empty">标题不能为空</string>
    <string name="reply_ok">回复成功</string>
    <string name="reply_failed">回复失败</string>
    <string name="publish_post_ok">发帖成功</string>
    <string name="publish_post_failed">发帖失败，请点击右上角“重新验证”按钮，验证成功后再次点击发表。如果仍然不能成功，请退出并重新登录，重新进入发贴页面。退出后系统会保存你的草稿，进入对应小组的发贴页面就会自动恢复草稿</string>

    <!-- Article -->
    <string name="sample_reply_title">回复文章</string>
    <string name="recommend_ok">推荐成功 ^_^</string>
    <string name="recommend_failed">推荐失败 0.0</string>
    <string name="follow_ok">关注成功 ^_^</string>
    <string name="follow_failed">关注失败 0.0</string>
    <string name="unfollow_ok">取消关注成功 ^_^</string>
    <string name="unfollow_failed">取消关注失败 0.0</string>
    <string name="title_activity_answer">回答</string>
    <string name="title_activity_simple_reply">评论区</string>
    <string name="have_not_login">尚未登录</string>
    <string name="network_error">网络错误</string>
    <string name="json_error">返回Json问题</string>
    <string name="token_invalid">登录无效，请重新登录~</string>
    <string name="login_failed_for_other_reason">登录失败</string>
    <string name="unknown_error">未知错误</string>
    <string name="click_to_login">点击登录</string>
    <string name="switch_day_night_mode">夜间模式</string>
    <string name="click_to_load_pre_page">点击加载上一页</string>
    <string name="click_to_load_latest_replies">点击加载最新回复</string>
    <string name="title_activity_publish_post">发帖</string>
    <string name="title_activity_publish_question">提问</string>
    <string name="hint_input_question_tag">输入问题标签，以\",\"分隔</string>
    <string name="hint_input_question_desc">输入问题补充说明(可选)</string>
    <string name="hint_input_question">输入问题</string>
    <string name="hint_input_post_title">输入帖子标题</string>
    <string name="selected_groups">首页左侧常用小组</string>
    <string name="selected_tags">首页左侧常用标签</string>
    <string name="selected_section_tip">点击增删，长按排序</string>
    <string name="more_unselected_groups">首页顶部小组们</string>
    <string name="more_unselected_tags">首页顶部标签们</string>
    <string name="more_groups">更多小组</string>
    <string name="more_tags">更多标签</string>
    <string name="tip_of_more_groups">点击进入小组，长按排序</string>
    <string name="tip_of_more_tags">点击进入标签，长按排序</string>
    <string name="unselected_section_tip">点击移到上边</string>
    <string name="action_reload_my_groups">重新加载小组</string>
    <string name="action_reload_my_tags">重新加载标签</string>
    <string name="image_load_mode">图片加载模式</string>
    <string name="custom_tail">自定义尾巴</string>
    <string name="log_out">退出登录</string>
    <string name="log_in">登录</string>
    <string name="about_app">关于本软件</string>

    <string name="mode_always_load">始终加载</string>
    <string name="mode_never_load">从不加载</string>
    <string name="mode_load_load_when_wifi">仅在wifi下加载图片</string>
    <string name="ok_to_logout">是否确定退出登录，退出将清除当前用户所有数据</string>
    <string name="ok_to_load_groups">尚未加载我关注的小组，是否开始加载？</string>
    <string name="ok_to_load_tags">尚未加载我关注的标签，是否开始加载？</string>
    <string name="use_default_groups">使用默认小组</string>
    <string name="use_default_tags">使用默认标签</string>
    <string name="confirm_to_load_my_groups">加载我的小组</string>
    <string name="confirm_to_load_my_tags">加载我的标签</string>
    <string name="hint">提示</string>
    <string name="way_to_load_image">选择图片加载模式</string>
    <string name="click_to_reload">点击重新加载</string>
    <string name="use_default_tail">使用默认尾巴</string>
    <string name="use_phone_as_tail">使用手机型号</string>
    <string name="use_custom_tail">自定义尾巴</string>
    <string name="unknown_phone">不明手机</string>
    <string name="reload_csrf_token">重新验证</string>
    <string name="delete_failed">删除失败~</string>
    <string name="get_csrf_ok">验证成功</string>
    <string name="have_not_join_this_group">尚未加入该小组~</string>
    <string name="get_csrf_failed">拉取验证失败</string>
    <string name="hint_reload_csrf">拉取验证失败，请点击右上角重新加载验证~</string>
    <string name="sample_support_number">9999</string>
    <string name="hint_input_your_tail">输入自定义尾巴，不输入则不添加尾巴~</string>
    <string name="load_failed">加载失败</string>
    <string name="manage_all_tags">管理所有标签</string>
    <string name="reload_all_tags">重新加载标签</string>
    <string name="manage_all_groups">管理所有小组</string>
    <string name="reload_all_groups">重新加载小组</string>
    <string name="has_supported">已经赞同过</string>
    <string name="has_opposed">已经反对过</string>
    <string name="click_again_to_exit">再次点击返回退出程序</string>
    <string name="login_needed">需要登录</string>
    <string name="post_author">楼主</string>
    <string name="page_404">页面不存在</string>
    <string name="action_share">分享到</string>
    <string name="action_share_to_wechat_circle">分享到朋友圈</string>
    <string name="action_share_to_wechat_friends">分享给微信好友</string>
    <string name="action_share_to_weibo">分享到新浪微博</string>
    <string name="tip_of_user_learn_add_image">上传完成后，请点击左下角的按钮将图片添加到编辑器~</string>
    <string name="hint_click_to_add_image_to_editor">上传完成，点击左下角按钮添加到编辑器~</string>
    <string name="uploading">上传中</string>
    <string name="user_handle_login_message">获取Token失败\n\n  (ノ=Д=)ノ┻━┻ \n\n 很有可能已经取得登录所需信息，请点击确定按钮继续，如果页面出现了错误信息或者本提示出现两次以上，请点击取消按钮或返回键退出登录页，然后再重试~</string>
    <string name="title_activity_single_reply">回复</string>

    <string name="hello_world">Hello world!</string>
    <string name="has_liked_this">已经赞过了</string>
    <string name="title_activity_message_center">消息中心</string>
    <string name="no_notice">没有通知</string>
    <string name="no_more_notice">没有更多的通知了</string>
    <string name="upload_failed">上传失败</string>
    <string name="action_follow_question">关注问题</string>
    <string name="action_unfollow_question">取消关注</string>
    <string name="no_load_homepage_image">不加载首页图片</string>
    <string name="hint_wechat_not_installed">微信未安装</string>
    <string name="open_in_browser">在浏览器中打开</string>
    <string name="hint_of_load_my_groups">点击右上角箭头可加载我关注的小组以及管理小组……</string>
    <string name="hint_of_load_my_tags">点击右上角箭头可加载我关注的问答标签以及管理标签……</string>
    <string name="ok_i_know">好了我知道了</string>
    <string name="title_activity_image">图片查看</string>
    <string name="title_activity_test">测试页面</string>

    <!-- 分享-->
    <string name="ERR_OK">分享成功</string>
    <string name="ERR_USER_CANCEL">分享取消</string>
    <string name="ERR_AUTH_DENIED">授权拒绝</string>
    <string name="ERR_SENT_FAILED">发送失败</string>
    <string name="ERR_COMM">分享失败</string>
    <string name="ERR_UNSUPPORT">分享不支持</string>
    <string name="ERR_UNKNOWN">未知错误</string>
    <string name="title_activity_wxentry">分享到微信</string>
    <string name="title_activity_weibo_share">分享到新浪微博</string>
    <string name="maybe_you_have_no_browsers">没能打开啊，难道没有浏览器？</string>
    <string name="hint_download_failed">下载失败~</string>
    <string name="hint_download_successfully_to">成功保存到：</string>
    <string name="validate_failed_try_again">验证失败，请点击右上角“重新验证”，提示成功后再点击发贴……</string>
    <string name="title_activity_post_list">PostListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">搜索</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="my_favors">我的收藏</string>
    <string name="my_posts">我的帖子</string>
    <string name="my_questions">我的问题</string>
    <string name="my_answer">我的回答</string>
    <string name="my_reply">我的回复</string>
    <string name="post_404">帖子不存在</string>
    <string name="question_404">问题不存在</string>
    <string name="article_404">文章不存在</string>
    <string name="me">我</string>
    <string name="report_bad_ad">垃圾广告</string>
    <string name="porn_messages">敏感或淫秽色情信息</string>
    <string name="attack">人身攻击</string>
    <string name="copy_right_problem">内容涉及抄袭及版权问题</string>
    <string name="other_reason">其他理由</string>
    <string name="hint_enter_reason_please">请输入举报理由</string>
    <string name="report">举报</string>

</resources>
