<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ArticleActivity">
    <item
        android:id="@+id/action_share_to_wechat_circle"
        android:orderInCategory="100"
        android:title="@string/action_share_to_wechat_circle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_to_wechat_friends"
        android:orderInCategory="101"
        android:title="@string/action_share_to_wechat_friends"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_to_weibo"
        android:orderInCategory="102"
        android:title="@string/action_share_to_weibo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load_desc"
        android:orderInCategory="103"
        android:title="@string/action_load_desc"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load_acs"
        android:orderInCategory="104"
        android:title="@string/action_load_acs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_in_browser"
        android:orderInCategory="105"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />
</menu>
