<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.PostActivity">
    <item
        android:id="@+id/action_share_to_wechat_circle"
        android:title="@string/action_share_to_wechat_circle"
        android:orderInCategory="102"
        android:icon="@drawable/weixin_circle_logo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_to_wechat_friends"
        android:title="@string/action_share_to_wechat_friends"
        android:orderInCategory="103"
        android:icon="@drawable/weixin_chat_logo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share_to_weibo"
        android:title="@string/action_share_to_weibo"
        android:orderInCategory="104"
        android:icon="@drawable/weibo_logo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load_desc"
        android:orderInCategory="105"
        android:title="@string/action_load_desc"
        android:icon="@drawable/ic_arrow_up"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_load_acs"
        android:orderInCategory="105"
        android:title="@string/action_load_acs"
        android:icon="@drawable/ic_arrow_down"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_open_in_browser"
        android:title="@string/open_in_browser"
        android:orderInCategory="106"
        android:icon="@drawable/ic_browser"
        app:showAsAction="never" />
</menu>
