<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/btn_ad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/report_bad_ad"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btn_porn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/porn_messages"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btn_attack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/attack"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btn_copy_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/copy_right_problem"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/btn_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/other_reason"
            android:textSize="16sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/text_other_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|top"
        android:hint="@string/hint_enter_reason_please"
        android:maxHeight="108dp"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_dialog_input_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/dialog_button_background"
            android:text="@string/cancel"
            android:textColor="@color/dialog_button_text_color" />

        <Button
            android:id="@+id/button_dialog_input_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/dialog_button_background"
            android:text="@string/ok"
            android:textColor="@color/dialog_button_text_color" />
    </LinearLayout>
</LinearLayout>