<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/list_standard_item_padding_vertical"
        android:paddingLeft="@dimen/list_standard_item_padding_horizontal"
        android:paddingRight="@dimen/list_standard_item_padding_horizontal"
        android:paddingTop="@dimen/list_standard_item_padding_vertical">

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_title"
            android:textColor="@color/list_title_color"
            android:textSize="@dimen/list_standard_title_font_size" />

        <TextView
            android:id="@+id/text_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_summary"
            android:textColor="@color/list_summary_color"
            android:textSize="@dimen/list_standard_summary_font_size" />

        <TextView
            android:id="@+id/text_like_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/sample_like_num" />
    </LinearLayout>

</android.support.v7.widget.CardView>