<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/list_item_padding_vertical"
    android:paddingLeft="@dimen/list_item_padding_horizontal"
    android:paddingRight="@dimen/list_item_padding_horizontal"
    android:paddingTop="@dimen/list_item_padding_vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/article_title"
        android:textSize="@dimen/list_title_font_size"
        tools:text="@string/sample_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/author_color"
            tools:text="@string/sample_author" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_text_text_gap"
            android:textColor="@color/author_color"
            tools:text="@string/sample_date" />
    </LinearLayout>

    <net.nashlegend.sourcewall.view.common.TTextView
        android:id="@+id/web_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:focusable="false"
        android:lineSpacingExtra="@dimen/lineSpacingExtra"
        android:textColorLink="@color/color_text_link" />

    <LinearLayout
        android:id="@+id/layout_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="@dimen/list_item_reply_image_dimen"
            android:layout_height="@dimen/list_item_reply_image_dimen"
            android:layout_marginTop="1dp"
            android:src="@drawable/ic_comment" />

        <TextView
            android:id="@+id/text_replies_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_text_icon_gap"
            android:maxLines="1"
            android:padding="0dp"
            android:textColor="@color/author_color"
            android:textSize="16sp"
            tools:text="@string/sample_like_num" />
    </LinearLayout>
</LinearLayout>
