<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">
    <!--使用RelativeLayout是因为在Android5.0上使用LinearLayout太小了-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_dialog_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/hint_recommend"
            android:minHeight="@dimen/input_dialog_input_height"
            android:padding="16dp"
            android:textColor="@color/reply_input_text"
            android:textColorHint="@color/reply_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_dialog_input_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@color/dialog_button_background"
                android:text="@string/cancel"
                android:textColor="@color/dialog_button_text_color" />

            <Button
                android:id="@+id/button_dialog_input_ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@color/dialog_button_background"
                android:text="@string/ok"
                android:textColor="@color/dialog_button_text_color" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
