<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/list_item_padding_vertical"
    android:paddingLeft="@dimen/list_item_padding_horizontal"
    android:paddingRight="@dimen/list_item_padding_horizontal"
    android:paddingTop="@dimen/list_item_padding_vertical">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/post_item_title_margin_bottom"
        android:textColor="@color/list_title"
        android:textSize="@dimen/list_title_font_size"
        tools:text="@string/sample_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/list_item_text_text_gap"
            android:layout_weight="0"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="@color/author_color"
            android:textSize="@dimen/text_author_view_font_size_dimen"
            tools:text="@string/sample_author" />

        <TextView
            android:id="@+id/text_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/list_item_text_text_gap"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="96dp"
            android:textColor="@color/author_color"
            android:textSize="@dimen/text_author_view_font_size_dimen"
            tools:text="@string/sample_group" />

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:maxWidth="96dp"
            android:textColor="@color/author_color"
            android:textSize="@dimen/text_author_view_font_size_dimen"
            tools:text="@string/sample_date" />

        <View
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="@dimen/list_item_reply_image_dimen"
            android:layout_height="@dimen/list_item_reply_image_dimen"
            android:layout_weight="0"
            android:src="@drawable/ic_comment" />

        <TextView
            android:id="@+id/text_replies_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_text_icon_gap"
            android:layout_weight="0"
            android:textColor="@color/author_color"
            android:textSize="@dimen/text_author_view_font_size_dimen"
            tools:text="@string/sample_like_num" />

        <ImageView
            android:layout_width="@dimen/list_item_like_image_dimen"
            android:layout_height="@dimen/list_item_like_image_dimen"
            android:layout_marginLeft="@dimen/list_item_text_text_gap"
            android:layout_weight="0"
            android:src="@drawable/like" />

        <TextView
            android:id="@+id/text_like_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_item_text_icon_gap"
            android:maxLines="1"
            android:textColor="@color/author_color"
            android:textSize="@dimen/text_author_view_font_size_dimen"
            tools:text="@string/sample_like_num" />
    </LinearLayout>
</LinearLayout>