<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/list_standard_item_padding_vertical"
        android:paddingLeft="@dimen/list_standard_item_padding_horizontal"
        android:paddingRight="@dimen/list_standard_item_padding_horizontal"
        android:paddingTop="@dimen/list_standard_item_padding_vertical">

        <TextView
            android:id="@id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_title"
            android:textSize="@dimen/Text_title_size_dimen" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@id/text_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_author"
                android:textSize="@dimen/text_author_view_font_size_dimen" />

            <TextView
                android:id="@id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_standard_item_text_text_gap"
                android:text="@string/sample_date"
                android:textSize="@dimen/text_author_view_font_size_dimen" />
        </LinearLayout>

        <WebView
            android:id="@+id/web_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_content_font_size_dimen" />

    </LinearLayout>
</android.support.v7.widget.CardView>